Bug 242812 - 'Save' button not implemented
Summary: 'Save' button not implemented
Status: CLOSED FIXED
Alias: None
Product: KAddressbook Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: VHI critical
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-25 19:28 UTC by Sabine Faure
Modified: 2010-09-20 16:46 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2010-06-25 19:28:13 UTC
Version:           unspecified
OS:                Linux

The 'Save' button is not implemented in the 'New contact' dialogue.

Reproducible: Always

Steps to Reproduce:
- Launch KAB-mobile on a N900
- Click on 'New contact'
- Enter a name and a phone number
- Click on the 'Save' button

Actual Results:  
Nothing happens (the dialogue stays open)

Expected Results:  
whereas the dialogue should close and the contact name should be added to the list in the main window.
Comment 1 Tobias Koenig 2010-06-28 12:11:19 UTC
Hej Sabine,

can you reproduce it running kab-mobile on the desktop as well?

Ciao,
Tobias
Comment 2 Bjoern Ricks 2010-09-17 12:30:47 UTC
Works for me in 4:4.5~20100910.1175630-1maemo6.1174786
Comment 3 Felix Wolfsteller 2010-09-17 17:43:42 UTC
Does not work in 4:4.5~20100917.1176264-1maemo1.1174921 anymore (tried with local folder).

A second press to "Save" leads to conflict.
Comment 4 Till Adam 2010-09-18 16:10:37 UTC
SVN commit 1176748 by tilladam:

Fully qualify types in signal declarations, to make connects work.

BUG: 242812
BUG: 251589

 M  +2 -2      editoritemmanager.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1176748
Comment 5 Felix Wolfsteller 2010-09-20 10:17:25 UTC
Confirmed fix for version 4:4.5~20100920.1177273-1maemo1.1174921 .
Comment 6 Bjoern Ricks 2010-09-20 16:46:56 UTC
Please merge this change also into latest tag http://websvn.kde.org/tags/kdepim/enterprise5.0.20100917.1176291/kdepim/