Fully qualify types in signal declarations, to make connects work.

BUG: 242812
BUG: 251589

svn path=/trunk/KDE/kdepim/incidenceeditor-ng/; revision=1176748